--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -21,7 +21,7 @@
         <ui:insert name="head" />
     </h:head>
 
-    <h:body>
+    <h:body class="dark">
         <h:form id="MainMessageForm">
             <p:growl id="PsalmMessages" showDetail="true"  severity="info, warn" autoUpdate="true" />
             <p:growl id="PsalmErrMessages" showDetail="true"  severity="error, fatal" sticky="true" autoUpdate="true" life="60000"/>
