--- a/src/main/webapp/resources/adamantium-layout/css/core-layout.css
+++ b/src/main/webapp/resources/adamantium-layout/css/core-layout.css
@@ -4,7 +4,7 @@
 
 /*html { text-rendering: optimizeLegibility !important; -webkit-font-smoothing: antialiased !important;}*/
 
-body{height:100%; width:100%;}
+body{height:100%; width:100%; color: #43A047 !important;}
 
 
 /* CORE LAYOUT STANDART STYLES ********************************************************************************************************** */
